--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,11 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "animate.css": "^4.1.1",
+    "react-icons": "^4.4.0",
+    "styled-components": "^5.3.5"
+    
   },
   "scripts": {
     "start": "react-scripts start",
