--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,12 +1,16 @@
 {
   "name": "frontend",
+  "proxy": "http://localhost:8080",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "antd": "^5.16.1",
+    "axios": "^1.6.8",
     "force": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
