--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "proxy": "http://localhost:8080",
+  "proxy": "${REACT_APP_PROXY_URL}",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
