--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fullcalendar/core": "^5.11.3",
     "@fullcalendar/daygrid": "^5.11.3",
     "@fullcalendar/interaction": "^5.11.3",
@@ -14,8 +13,9 @@
     "@fullcalendar/react": "^5.11.2",
     "@fullcalendar/timegrid": "^5.11.3",
     "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.1",
+    "@mui/material": "^5.15.16",
     "@mui/x-data-grid": "^5.17.16",
+    "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -26,6 +26,7 @@
     "axios": "^1.6.8",
     "force": "^0.0.3",
     "formik": "^2.2.9",
+    "google-map-react": "^2.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "2.10.1",
     "react-dom": "^18.2.0",
